// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCardField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1vb4aev0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <legend
              class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
            >
              test
            </legend>
            <div
              class="uv_1w3vbem0 uv_1w3vbem2p"
              style="--uv_85qyp70: repeat(1, minmax(0, 1fr)); --uv_85qyp71: repeat(1, minmax(0, 1fr)); --uv_85qyp72: repeat(1, minmax(0, 1fr)); --uv_85qyp73: repeat(1, minmax(0, 1fr)); --uv_85qyp74: repeat(1, minmax(0, 1fr)); --uv_85qyp75: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="radio"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
                    data-checked="false"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      class="uv_v3r5nra"
                      id="_r_5_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 1"
                    />
                    <svg
                      class="uv_v3r5nrb"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_v3r5nre"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_v3r5nrd"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_v3r5nrc"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_5_"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="radio"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
                    data-checked="false"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      class="uv_v3r5nra"
                      id="_r_d_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="radio 2"
                    />
                    <svg
                      class="uv_v3r5nrb"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_v3r5nre"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_v3r5nrd"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_v3r5nrc"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_d_"
                    >
                      Radio 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as a checkbox 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1vb4aev0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <legend
              class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
            >
              test
            </legend>
            <div
              class="uv_1w3vbem0 uv_1w3vbem2p"
              style="--uv_85qyp70: repeat(1, minmax(0, 1fr)); --uv_85qyp71: repeat(1, minmax(0, 1fr)); --uv_85qyp72: repeat(1, minmax(0, 1fr)); --uv_85qyp73: repeat(1, minmax(0, 1fr)); --uv_85qyp74: repeat(1, minmax(0, 1fr)); --uv_85qyp75: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-testid="checked"
                data-type="checkbox"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_mzeuq8d uv_thx8yx1 uv_thx8yx0"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-checked="true"
                    aria-invalid="false"
                    checked=""
                    class="uv_thx8yx4 uv_thx8yx3"
                    id="_r_13_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="checked"
                  />
                  <svg
                    class="uv_thx8yx7 uv_thx8yx6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_thx8yx9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_thx8yxa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                    style="--uv_1d8tbmb3: 1;"
                  >
                    <div
                      class="uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j"
                    >
                      <label
                        class="uv_thx8yxc uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                        for="_r_13_"
                      >
                        Checkbox 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should render correctly checked as radiofield 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1vb4aev0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <legend
              class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
            >
              test
            </legend>
            <div
              class="uv_1w3vbem0 uv_1w3vbem2p"
              style="--uv_85qyp70: repeat(1, minmax(0, 1fr)); --uv_85qyp71: repeat(1, minmax(0, 1fr)); --uv_85qyp72: repeat(1, minmax(0, 1fr)); --uv_85qyp73: repeat(1, minmax(0, 1fr)); --uv_85qyp74: repeat(1, minmax(0, 1fr)); --uv_85qyp75: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="true"
                data-disabled="false"
                data-error="false"
                data-testid="checked"
                data-type="radio"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                >
                  <div
                    aria-disabled="false"
                    class="uv_mzeuq8d uv_v3r5nr4 uv_v3r5nr2"
                    data-checked="true"
                    data-invalid="false"
                  >
                    <input
                      aria-disabled="false"
                      checked=""
                      class="uv_v3r5nra"
                      id="_r_o_"
                      name="test"
                      tabindex="-1"
                      type="radio"
                      value="checked"
                    />
                    <svg
                      class="uv_v3r5nrb"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        radio
                      </title>
                      <g>
                        <circle
                          class="uv_v3r5nre"
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="6"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                          stroke-width="2"
                        />
                        <circle
                          class="uv_v3r5nrd"
                          cx="12"
                          cy="12"
                          r="8"
                        />
                        <circle
                          class="uv_v3r5nrc"
                          cx="12"
                          cy="12"
                          r="5"
                        />
                      </g>
                    </svg>
                    <label
                      class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                      for="_r_o_"
                    >
                      Radio 1
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectableCardField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1vb4aev0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <legend
              class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
            >
              test
            </legend>
            <div
              class="uv_1w3vbem0 uv_1w3vbem2p"
              style="--uv_85qyp70: repeat(1, minmax(0, 1fr)); --uv_85qyp71: repeat(1, minmax(0, 1fr)); --uv_85qyp72: repeat(1, minmax(0, 1fr)); --uv_85qyp73: repeat(1, minmax(0, 1fr)); --uv_85qyp74: repeat(1, minmax(0, 1fr)); --uv_85qyp75: repeat(1, minmax(0, 1fr));"
            >
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="checkbox"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_mzeuq8d uv_thx8yx1 uv_thx8yx0"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_thx8yx4 uv_thx8yx3"
                    id="_r_1d_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 1"
                  />
                  <svg
                    class="uv_thx8yx7 uv_thx8yx6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_thx8yx9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_thx8yxa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                    style="--uv_1d8tbmb3: 1;"
                  >
                    <div
                      class="uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j"
                    >
                      <label
                        class="uv_thx8yxc uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                        for="_r_1d_"
                      >
                        Radio 1
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="uv_mzeuq80 uv_mzeuq81 uv_mzeuq85 uv_mzeuq86 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
                data-checked="false"
                data-disabled="false"
                data-error="false"
                data-type="checkbox"
                role="button"
                style="--uv_1d8tbmb3: 1; --uv_8im5570: none; --uv_8im5571: inline; --uv_8im5572: 100%;"
                tabindex="0"
              >
                <div
                  aria-disabled="false"
                  class="uv_mzeuq8d uv_thx8yx1 uv_thx8yx0"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-checked="false"
                    aria-invalid="false"
                    class="uv_thx8yx4 uv_thx8yx3"
                    id="_r_1k_"
                    name="test"
                    tabindex="-1"
                    type="checkbox"
                    value="radio 2"
                  />
                  <svg
                    class="uv_thx8yx7 uv_thx8yx6"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      test
                    </title>
                    <g>
                      <rect
                        class="uv_thx8yx9"
                        height="16"
                        rx="0.125rem"
                        stroke-width="2"
                        width="16"
                        x="4"
                        y="4"
                      />
                      <path
                        class="uv_thx8yxa"
                        clip-rule="evenodd"
                        d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                        fill="white"
                        fill-rule="evenodd"
                        height="9"
                        width="12"
                        x="5"
                        y="4"
                      />
                    </g>
                  </svg>
                  <div
                    class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                    style="--uv_1d8tbmb3: 1;"
                  >
                    <div
                      class="uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j"
                    >
                      <label
                        class="uv_thx8yxc uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                        for="_r_1k_"
                      >
                        Radio 2
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
